--- a/HuiYing/Info.plist
+++ b/HuiYing/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string>开启定位</string>
+    <string>我们将用您的位置信息帮助你找到周围的影院</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
